@@ -1,7 +1,7 @@
 package practice;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Person;
@@ -17,7 +17,6 @@ public class StreamPractice {
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
                 .flatMap(s -> List.of(s.split(",")).stream())
-                .map(String::trim)
                 .mapToInt(Integer::parseInt)
                 .filter(n -> n % 2 == 0)
                 .min()
@@ -37,7 +36,7 @@ public class StreamPractice {
                 .map(i -> i % 2 != 0 ? numbers.get(i) - 1 : numbers.get(i))
                 .filter(n -> n % 2 != 0)
                 .average()
-                .orElseThrow();
+                .orElseThrow(() -> new NoSuchElementException("No odd numbers"));
     }
 
     /**
@@ -54,7 +53,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getSex() == Person.Sex.MAN)
                 .filter(p -> p.getAge() >= fromAge && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -74,7 +73,7 @@ public class StreamPractice {
                 .filter(p -> p.getAge() >= fromAge)
                 .filter(p -> (p.getSex() == Person.Sex.WOMAN && p.getAge() <= femaleToAge)
                         || (p.getSex() == Person.Sex.MAN && p.getAge() <= maleToAge))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -90,7 +89,7 @@ public class StreamPractice {
                 .filter(p -> p.getAge() >= femaleAge)
                 .flatMap(p -> p.getCats().stream())
                 .map(cat -> cat.getName())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -113,8 +112,8 @@ public class StreamPractice {
     public List<String> validateCandidates(List<Candidate> candidates) {
         return candidates.stream()
                 .filter(new CandidateValidator())
-                .map(c -> c.getName())
+                .map(candidate -> candidate.getName())
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
